hphp/test/slow/finally/new_try_catch_009.php.expectf
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15

Fatal error: Uncaught exception 'A' with message 'bla!' in %s/test/slow/finally/new_try_catch_009.php:27
Stack trace:
#0 %s/test/slow/finally/new_try_catch_009.php(%s): blah()
#1 {main}

Next exception 'C' with message 'ble!' in %s/test/slow/finally/new_try_catch_009.php:31
Stack trace:
#0 %s/test/slow/finally/new_try_catch_009.php(%s): blah()
#1 {main}

Next exception 'B' with message '16' in %s/test/slow/finally/new_try_catch_009.php:43
Stack trace:
#0 %s/test/slow/finally/new_try_catch_009.php(60): blah()
#1 {main}
